# ccf

./: Makefile.am  NOTICE  README  configure.in
src/: Makefile.am
src/ccf/: Makefile.am  address.h  client.h  cluster.cc  cluster.h  connection.h  listener.h  maddress.cc  maddress.h  managed_connection.h  mhclient.h  protocol.h  responder.h  responder_impl.h  retry.h  rpc_connection.h  scoped_listen.h  server.h  service.cc  service.h  session.cc  session.h  session_manager.h  session_request.h  session_responder.h  session_responder_impl.h  state_connection.h  stream.h  stream_connection.h  types.h
src/exceptrace/: Makefile.am  exceptrace.cc
src/generator/: Makefile.am  ccfproto.rb  mplex.rb  phraser.rb  proto.mpl  protogen  stub.mpl
src/logic/: Makefile.am
src/logic/client/: main.cc
src/logic/proto/: Makefile.am  client.msg  server.msg
src/logic/server/: connection.h  main.cc  message.ccf  proto.mpl  service_listener.h  stub.mpl
src/mp/: Makefile.am
src/mp/wavy/: core.pre.h  service.pre.h  singleton.pre.h
src/mpio/: wavy_edge.h
src/mpsrc/: wavy_base.cc  wavy_core.h  wavy_out.cc  wavy_port_kqueue.h
