noinst_LIBRARIES = libccf.a

libccf_a_CPPFLAGS = -I..

libccf_a_SOURCES = \
		address.cc \
		maddress.cc \
		service.cc \
		session.cc

noinst_HEADERS = \
		address.h \
		client.h \
		cluster.h \
		connection.h \
		listener.h \
		maddress.h \
		managed_connection.h \
		mhclient.h \
		protocol.h \
		responder.h \
		responder_impl.h \
		retry.h \
		rpc_connection.h \
		scoped_listen.h \
		server.h \
		service.h \
		session.h \
		session_manager.h \
		session_request.h \
		session_responder.h \
		session_responder_impl.h \
		state_connection.h \
		stream.h \
		stream_connection.h \
		types.h \
		util.h

